fixed animation firefox, overflow scroll freewriter

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -239,7 +239,7 @@ main.display {
 
 .freewriter {
 	border: none;
-	overflow: auto;
+	overflow: scroll;
 	padding: 1em 1em 6em 1em;
 	resize: none;
 	width: 100%;
@@ -596,7 +596,7 @@ section {
 	color: $color-light;
 	font-family: $font-headings;
 	font-size: 2em;
-	height: 100vh;
+	min-height: 100vh;
 	padding: 1em 0;
 	text-transform: uppercase;
 
@@ -607,17 +607,20 @@ section {
 	}
 }
 
-.prompt {animation: promptBar 500ms linear 3s forwards;}
+.prompt {
+	animation: promptBar 500ms linear 3s forwards;
+}
 
 
 @keyframes promptBar {
 	0% {
-		height: 100vh;
 		padding: 1em 0;
 	}
 	100% {
 		font-size: 16px;
 		height: auto;
+		min-height: 0;
+		max-height: 100px;
 		padding: 1em 0;
 	}
 }
@@ -958,4 +961,24 @@ section {
 	margin: 0 auto;
 }
 
+//STATS
+
+
+.stats-comp {
+	animation: streak 400ms ease-out 100ms 6;
+
+	.btn {
+		animation: streak 400ms ease-out 100ms 6;
+	}
+}
+
+@keyframes streak {
+	0% {
+		color: $color-dark;
+	}
+	100% {
+		color: $color-accent;
+		border-color: $color-accent;
+	}
+}
 
